# Math-Question-Generator

./: requirements.txt  streamlit_app.py
.github/workflows/: integrated-test.yml  integrated-test.yml-temp-disable  rust.yml
core/: answer.py  generators.py  initialize.py  question.py
core/components/: initialize.py  initializer.py  inputter.py  keyboard.py  main_tab.py  prototype_inputter.py  setting_tab.py  statistics_tab.py  template_tab.py
core/core/: answer.py  error_handler.py  generators.py  initialize.py  question.py
core/data/: signs.py
rust-core/: Cargo.toml  pyproject.toml
rust-core/src/: lib.rs
tests/: test_dummy.py
